example_queue_structure/tmp/2023_09_08_11_34_05/error.log
  File "/home/aerotract/software/ziggy_workspace/broken_pipeline/script.py", line 1
    import this package does not exist
                ^^^^^^^
SyntaxError: invalid syntax
